[project]
name = "gerador-de-senha-flask"
version = "0.1.0"
description = ""
authors = [
    {name = "Daniel Carvalho",email = "daniel_ti@live.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "gerador_de_senha_flask", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
